Added spotless plugin.